--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 	<a href="order windows/index.html">order windows</a>
+	<a href="course project/index.html">course project</a>
+	<a href="landing page/index.html">landing page</a>
+	<a href="photographer’s portfolio/index.html">photographer’s portfolio</a>
+	<a href="game and scrollColor/index.html">game and scrollColor</a>
+	<a href="registration form/index.html">registration form</a>
+	<a href="slider 1pic/index.html">slider 1pic</a>
+	<a href="wedding page/index.html">wedding page</a>
+	<a href="webstore/index.html">webstore</a>
+	<a href="slider 3pic/index.html">slider 3pic</a>
+	<a href="table/index.html">table</a>
 </body>
 </html>
