--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ilya Otroshko</title>
+		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="table/css/style1.css">
 </head>
 <body>
-	<a href="order windows/index.html">order windows</a>
-	<a href="course project/index.html">course project</a>
-	<a href="landing page/index.html">landing page</a>
-	<a href="photographer’s portfolio/index.html">photographer’s portfolio</a>
-	<a href="game and scrollColor/index.html">game and scrollColor</a>
-	<a href="registration form/index.html">registration form</a>
-	<a href="slider 1pic/index.html">slider 1pic</a>
-	<a href="wedding page/index.html">wedding page</a>
-	<a href="webstore/index.html">webstore</a>
-	<a href="slider 3pic/index.html">slider 3pic</a>
-	<a href="table/index.html">table</a>
+	<h1>Ilya Otroshko</h1>
+	<h2>Age:21<br>
+	Stack: HTML/CSS/JavaScript/PHP/MySQl<br>
+	My project:
+	</h2>
+	<ul>
+		<li><a href="order windows/index.html">order windows</a></li>
+		<li><a href="course project/index.html">course project</a></li>
+		<li><a href="landing page/index.html">landing page</a></li>
+		<li><a href="photographer’s portfolio/index.html">photographer’s portfolio</a></li>
+		<li><a href="game and scrollColor/index.html">game and scrollColor</a></li>
+		<li><a href="registration form/index.html">registration form</a></li>
+		<li><a href="slider 1pic/index.html">slider 1pic</a></li>
+		<li><a href="wedding page/index.html">wedding page</a></li>
+		<li><a href="webstore/index.html">webstore</a></li>
+		<li><a href="slider 3pic/index.html">slider 3pic</a></li>
+		<li><a href="table/index.html">table</a></li>
+</ul>
 </body>
 </html>
